update gradle and create noise module