@@ -1,5 +1,13 @@
-apply plugin: "java"
+apply plugin: 'java'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_15
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 sourceSets.main.java.srcDirs = ["src/"]
+
+tasks.withType(JavaCompile) {
+    options.warnings = false
+    options.deprecation = false
+    options.compilerArgs += ["-Xlint"]
+    options.compilerArgs += ["-Xdoclint:none", "-Xlint:none", "-nowarn"]
+    options.compilerArgs += ["--enable-preview"]
+}
